Implemented different CitiesInCountry again